// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormGroup appends custom className 1`] = `
<DocumentFragment>
  <div
    class="space-y-1 extra-class"
  />
</DocumentFragment>
`;

exports[`FormGroup renders contents properly 1`] = `
<DocumentFragment>
  <div
    class="space-y-1"
  >
    contents
  </div>
</DocumentFragment>
`;
